[gd_scene load_steps=5 format=3 uid="uid://vgjr6fa7s1k7"]

[ext_resource type="Script" path="res://main/scripts/maps.gd" id="1_pq1vh"]
[ext_resource type="Texture2D" uid="uid://du70tkceoowco" path="res://main/textures/logo.png" id="2_dus83"]
[ext_resource type="FontFile" uid="uid://coben8apb0s5d" path="res://map_b/materials/NoScary-regular.ttf" id="3_ayhuo"]
[ext_resource type="AudioStream" uid="uid://bep7488gseuoh" path="res://map_b/materials/sounds/lobby.mp3" id="4_77dw6"]

[node name="Maps" type="Control" node_paths=PackedStringArray("bg_music")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pq1vh")
bg_music = NodePath("Lobby")

[node name="background" type="ColorRect" parent="."]
offset_right = 1151.0
offset_bottom = 646.0
color = Color(0, 0, 0, 1)

[node name="logo" type="TextureRect" parent="."]
offset_left = 135.0
offset_top = 26.0
offset_right = 1014.0
offset_bottom = 511.0
texture = ExtResource("2_dus83")
expand_mode = 3

[node name="red_maze" type="Button" parent="."]
offset_left = 459.0
offset_top = 368.0
offset_right = 659.0
offset_bottom = 431.0
theme_override_colors/font_hover_pressed_color = Color(0.737255, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.737255, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ayhuo")
theme_override_font_sizes/font_size = 40
text = "Red Maze"

[node name="office_space" type="Button" parent="."]
offset_left = 459.0
offset_top = 446.0
offset_right = 659.0
offset_bottom = 509.0
theme_override_colors/font_hover_pressed_color = Color(0.737255, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.737255, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ayhuo")
theme_override_font_sizes/font_size = 40
text = "Office Space"

[node name="back" type="Button" parent="."]
offset_left = 459.0
offset_top = 523.0
offset_right = 659.0
offset_bottom = 586.0
theme_override_colors/font_hover_pressed_color = Color(0.737255, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.737255, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ayhuo")
theme_override_font_sizes/font_size = 40
text = "Go back"

[node name="Lobby" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_77dw6")

[connection signal="pressed" from="red_maze" to="." method="level1"]
[connection signal="pressed" from="office_space" to="." method="level2"]
[connection signal="pressed" from="back" to="." method="go_back"]
